--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,12 @@
       {
         "format": "expanded",
         "extensionName": ".css",
-        "savePath": "assets/css"
+        "savePath": "~/assets/css"
       },
       {
         "format": "compressed",
         "extensionName": ".min.css",
-        "savePath": "assets/css"
+        "savePath": "~/assets/css"
       }
     ],
     "liveSassCompile.settings.generateMap": false //,
