--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "savePath": "/assets/css"
       }
     ],
-    "liveSassCompile.settings.generateMap": false //,
+    "liveSassCompile.settings.generateMap": false,
+    "liveServer.settings.port": 5502 //,
     // "liveServer.settings.CustomBrowser": "PiP Browser"
 }
